<resources>
    <string name="app_name">FirstApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nichanun">Nichanun Ploycharoen</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="FirstApp">FirstApp</string>

    <string name="bio">Nichanun Ploycharoen
    \n\nNun
    \n\nI’m 20 years old.
    \n\nMy birthday is the 6th of January 2000.
    \n\n
    \n\nMy motto
    \n\n"The future depends on what we do in the present"</string>
    <string name="mail">nichanun.pl@rmuti.ac.th</string>
    <string name="A">61162110055-2</string>
    <string name="aboutme">About Me</string>
    <string name="Contact">Contact</string>
    <string name="home">1/141 Moo.1
    \n\nTumbon : NongPhaiLom Ampher : Muang
    \n\nNakhon Ratchasima 30000</string>
    <string name="facebook">นิช นัน</string>
    <string name="line">nchn43</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>